--- a/cv.tex
+++ b/cv.tex
@@ -155,20 +155,14 @@
 %----------------------------------------------------------------------------------------
 
 %Interests/ Keywords/ Summary
-% \section{Summary}
-% This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
+\section{Summary}
+This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
 
 %Experience
 \section{Work Experience}
 
-\begin{jobshort}{Barclays India ~ Software Devloper}{June 2023 - present}
-\usepackage{enumitem}
-\begin{itemize}[font=$\bullet$]
-    \item \textbf{Saved $15,000+ per month} by developing utilities ensuring optimal AWS Lambda usage
-    \item \textbf{Reduced Error Resolution time by around 75%} by developing error routing mechanisms across domains using python, IBM Netcool, AWS Logs, Subscription Filters
-    \item \textbf{Optimized and Developed automated CICD pipelines} for smooth deployments with \textbf{63% lower downtimes}
-    \item Participated in the \textbf{Successful launch of Barclays Cloud Platform} (NGCB), and contributed to \textbf{ArrowCard}, the \textbf{first credit card} on NGCB
-\end{itemize}
+\begin{jobshort}{Designation}{Jan 2021 - present}
+long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width
 \end{jobshort}
 
 
