Updated Resume 4th Sept, 2024

--- a/RitvikSharma_Resume.tex
+++ b/RitvikSharma_Resume.tex
@@ -142,12 +142,12 @@
 % \end{tabularx}
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
-\Huge{Ritvik Sharma} \\[7.5pt]
-\href{https://github.com/ritviksharma4}{\raisebox{-0.05\height}\faGithub\ github.com} \ $|$ \ 
-\href{https://linkedin.com/in/ritviksharma4}{\raisebox{-0.05\height}\faLinkedin\ linkedin.com} \ $|$ \ 
-\href{https://ritvik-sharma.com}{\raisebox{-0.05\height}\faGlobe \ www.ritvik-sharma.com} \ $|$ \ 
-\href{mailto:ritviksharma4@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ ritviksharma4@gmail.com} \ $|$ \ 
-\href{tel:+6305555305}{\raisebox{-0.05\height}\faMobile \ +91-630-55-55-305} \\
+\Huge{Ritvik Sharma} \\[7pt]
+\href{https://github.com/ritviksharma4}{\raisebox{-0.03\height}\faGithub\ github.com} \ $|$ \ 
+\href{https://linkedin.com/in/ritviksharma4}{\raisebox{-0.03\height}\faLinkedin\ linkedin.com} \ $|$ \ 
+\href{https://ritvik-sharma.com}{\raisebox{-0.03\height}\faGlobe \ www.ritvik-sharma.com} \ $|$ \ 
+\href{mailto:ritviksharma4@gmail.com}{\raisebox{-0.03\height}\faEnvelope \ ritviksharma4@gmail.com} \\ 
+% \href{tel:+6305555305}{\raisebox{-0.03\height}\faMobile \ +91-630-55-55-305} \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -155,28 +155,42 @@
 %----------------------------------------------------------------------------------------
 
 %Interests/ Keywords/ Summary
-\section{Summary}
-This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
+% \section{Summary}
+% This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
 
 %Experience
 \section{Work Experience}
 
-\begin{jobshort}{Designation}{Jan 2021 - present}
-long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width
-\end{jobshort}
+\begin{joblong}{Barclays India -- Software Developer}{June 2023 - Present}
+\item \textbf{Saved \$15,000+ per month} by developing utilities ensuring optimal AWS Lambda usage
+\item \textbf{Reduced Error Resolution time by around 75\%} by developing an error routing utility across domains using Python, IBM Netcool, SNS Topic and Subscription Filters
+\item \textbf{Optimized and Developed} automated CICD pipelines for smooth deployments with \textbf{63\% higher success rates.}
+\item Participated in the \textbf{Successful launch of Barclays Cloud Platform} (NGCB), and contributed to \textbf{ArrowCard, the first credit card} on NGCB.}
+\end{joblong}
 
+% Saved \ \$15,000+ per month by developing utilities ensuring optimal AWS Lambda usage    
 
-\begin{joblong}{Designation}{Mar 2019 - Jan 2021}
-\item long long line of blah blah that will wrap when the table fills the column width
-\item again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah. again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah
+\begin{joblong}{Barclays India -- Summer Internship}{June 2022 - August 2022}
+\item Used Python and MongoDB to scan logs in Kibana and find the most frequently visited journeys to migrate from on-prem to AWS.
+\subitem -- Journey: Login, Transaction and View Statement are some journeys
+\subitem -- Find which services are rarely used to avoid deploying on AWS and saving cost
+\subitem -- Find which services are causing the most errors
+\item \textbf{Optimized and Reduced code complexity using SonarQube + Java by 31\%.}
 \end{joblong}
   
 %Projects
-\section{Projects}
+\section{Achievements \& Projects}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Some Project} & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
+\href{https://github.com/ritviksharma4/My-Certificates/blob/main/My\%20Certificates/Ritvik\%20Sharma\%20SRM\%20Hackathon\%20Winner.pdf}{University Hackathon Winner: Mercury ChatBot} & \hfill \href{https://mercury.ritvik-sharma.com/}{Link to Demo} \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{-- A Chatbot built using AIML technologies for finding food order details from a sentence such as \“I want \textbf{2 Non-Veg Pizzas} from \textbf{Dominos}.\”}  \\
+\multicolumn{2}{@{}X@{}}{-- \textbf{Designed and Implemented} the backend of the Mobile app made with Python, Flutter and using \textbf{ALBERT (LLM for NLP) and CRF (Probabilistic Prediction) and Speech To Text.} }  \\
+\end{tabularx}
+
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace safety App} & \hfill \href{https://www.youtube.com/watch\?v\=LwRyr8F4fns}{Link to Demo} \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{-- An app for monitoring People and flagging those without Masks to keep the Workplace Safe.}  \\
+\multicolumn{2}{@{}X@{}}{-- \textbf{Designed and Implemented} the backend of the Mobile app where I worked on Face Detection and Recognition along with MySQL DB and NodeJS Backend.}  \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -184,13 +198,8 @@ long long line of blah blah that will wrap when the table fills the column width
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}	
-2030 - present & PhD (Subject) at \textbf{University} \hfill \normalsize (GPA: 4.0/4.0) \\
+2019 - 2023 & Bachelor's in (C.Sc with Spec. in AIML) at \textbf{SRM University} \hfll \normalsize (GPA: 9.86 \| Silver Medalist) \\
 
-2023 - 2027 & Bachelor's Degree at \textbf{College} \hfill (GPA: 4.0/4.0) \\ 
-
-2022 & Class 12th Some Board \hfill  (Grades) \\
-
-2021 & Class 10th Some Board \hfill  (Grades) \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -205,13 +214,11 @@ long long line of blah blah that will wrap when the table fills the column width
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
-\section{Skills}
+\section{Skills \& Certifications}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Some Skills &  \normalsize{This, That, Some of this and that etc.}\\
-Some More Skills  &  \normalsize{Also some more of this, Some more that, And some of this and that etc.}\\  
+Programming \& Development &  \normalsize{Python, Django, NodeJS, MySQL, MongoDB, gRPC--bi-directional data streaming}\\
+Machine Learnnig &  \normalsize{NLP, BERT, ALBERT, CRF, Slot-Filling + Intent Classification}\\  
+Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce93111ee34656b2351006a9a4ebad}{Harvard Entrepreneurship} , \href{https://github.com/ritviksharma4/My-Certificates/blob/main/My\%20Certificates/Ritvik\%20Sharma\%20NVIDIA\%20Deep\%20Learning\%20Institute\%20Certificate.pdf}{NVIDIA Deep Learning}}
 \end{tabularx}
-
-\vfill
-\center{\footnotesize Last updated: \today}
 
 \end{document}
