--- a/citations.bib
+++ b/citations.bib
@@ -1,9 +1,9 @@
 @article{dummypaper,
 	title = {VectorQuest: A Faster and Better Open-Domain Question-Answering System },
-	volume = {99},
+	volume = {1},
 	url = {},
 	abstract = {},
-	number = {},
+	number = {1},
 	journal = {Springer},
 	author = {Ritvik Sharma},
 	month = dec,
