Updated Resume as of Sept 4, 2024

--- a/RitvikSharma_Resume.tex
+++ b/RitvikSharma_Resume.tex
@@ -216,7 +216,7 @@
 %----------------------------------------------------------------------------------------
 \section{Skills \& Certifications}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Programming \& Development &  \normalsize{Python, Django, NodeJS, MySQL, MongoDB, gRPC--bi-directional data streaming}\\
+Programming \& Development &  \normalsize{AWS -- Route53 + CloudFront + ECS + EC2, Python, Django, NodeJS, MySQL, MongoDB, gRPC--bi-directional data streaming}\\
 Machine Learnnig &  \normalsize{NLP, BERT, ALBERT, CRF, Slot-Filling + Intent Classification}\\  
 Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce93111ee34656b2351006a9a4ebad}{Harvard Entrepreneurship} , \href{https://github.com/ritviksharma4/My-Certificates/blob/main/My\%20Certificates/Ritvik\%20Sharma\%20NVIDIA\%20Deep\%20Learning\%20Institute\%20Certificate.pdf}{NVIDIA Deep Learning}}
 \end{tabularx}
