Updated Mercury Example + Miscellaneous fixes

--- a/RitvikSharma_Resume.tex
+++ b/RitvikSharma_Resume.tex
@@ -171,10 +171,10 @@
 % Saved \ \$15,000+ per month by developing utilities ensuring optimal AWS Lambda usage    
 
 \begin{joblong}{Barclays India -- Summer Internship}{June 2022 - August 2022}
-\item Used Python and MongoDB to scan logs in Kibana and find the most frequently visited journeys to migrate from on-prem to AWS.
+\item Used Python and MongoDB to scan logs in Kibana and find the \textbf{most frequently visited journeys} to migrate from \textbf{on-prem to AWS.}
 \subitem -- Journey: Login, Transaction and View Statement are some journeys
-\subitem -- Find which services are rarely used to avoid deploying on AWS and saving cost
-\subitem -- Find which services are causing the most errors
+\subitem -- \textbf{Save cost} by finding out which services are rarely used to avoid deploying on AWS
+\subitem -- Finding out which services are causing the most errors
 \item \textbf{Optimized and Reduced code complexity using SonarQube + Java by 31\%.}
 \end{joblong}
   
@@ -183,12 +183,12 @@
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \href{https://github.com/ritviksharma4/My-Certificates/blob/main/My\%20Certificates/Ritvik\%20Sharma\%20SRM\%20Hackathon\%20Winner.pdf}{University Hackathon Winner: Mercury ChatBot} & \hfill \href{https://mercury.ritvik-sharma.com/}{Link to Demo} \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{-- A Chatbot built using AIML technologies for finding food order details from a sentence such as \“I want \textbf{2 Non-Veg Pizzas} from \textbf{Dominos}.\”}  \\
+\multicolumn{2}{@{}X@{}}{-- A Chatbot built using AIML technologies for finding food order details from a sentence such as \“I want \textbf{2 Veg Margherita Pizzas with Olives} from \textbf{Dominos}.\”}  \\
 \multicolumn{2}{@{}X@{}}{-- \textbf{Designed and Implemented} the backend of the Mobile app made with Python, Flutter and using \textbf{ALBERT (LLM for NLP) and CRF (Probabilistic Prediction) and Speech To Text.} }  \\
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace safety App} & \hfill \href{https://www.youtube.com/watch\?v\=LwRyr8F4fns}{Link to Demo} \\[3.75pt]
+\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace Safety App} & \hfill \href{https://www.youtube.com/watch\?v\=LwRyr8F4fns}{Link to Demo} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{-- An app for monitoring People and flagging those without Masks to keep the Workplace Safe.}  \\
 \multicolumn{2}{@{}X@{}}{-- \textbf{Designed and Implemented} the backend of the Mobile app where I worked on Face Detection and Recognition along with MySQL DB and NodeJS Backend.}  \\
 \end{tabularx}
