Updated NVIDIA Certificate

--- a/citations.bib
+++ b/citations.bib
@@ -3,7 +3,7 @@
 	volume = {1},
 	url = {},
 	abstract = {},
-	number = {1},
+	number = {},
 	journal = {Springer},
 	author = {Ritvik Sharma},
 	month = dec,
