--- a/citations.bib
+++ b/citations.bib
@@ -1,13 +1,13 @@
-@article{dummypaper,
+@article{MyPaper,
 	title = {VectorQuest: A Faster and Better Open-Domain Question-Answering System },
-	volume = {1},
+	volume = {},
 	url = {},
 	abstract = {},
 	number = {},
-	journal = {Springer},
+	journal = {Springer International},
 	author = {Ritvik Sharma},
 	month = dec,
 	year = {2024},
 	keywords = {Question-Answering, Open-Domain, Vector Database, BERT, RoBERTa},
 	pages = {1--11},
-}
+},
