Updated NVIDIA Certificate

--- a/RitvikSharma_Resume.tex
+++ b/RitvikSharma_Resume.tex
@@ -218,7 +218,7 @@
 \begin{tabularx}{\linewidth}{@{}l X@{}}
 Programming \& Development &  \normalsize{AWS -- Route53 + CloudFront + ECS + EC2, Python, Django, NodeJS, MySQL, MongoDB, gRPC--bi-directional data streaming}\\
 Machine Learnnig &  \normalsize{NLP, BERT, ALBERT, CRF, Slot-Filling + Intent Classification}\\  
-Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce93111ee34656b2351006a9a4ebad}{Harvard Entrepreneurship} , \href{}{NVIDIA Deep Learning}}
+Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce93111ee34656b2351006a9a4ebad}{Harvard Entrepreneurship} , \href{https://learn.nvidia.com/certificates?id=0dfcf9b3a87143c59605f8179bd6ebb8}{NVIDIA Deep Learning}}
 \end{tabularx}
 
 \end{document}
