--- a/RitvikSharma_Resume.tex
+++ b/RitvikSharma_Resume.tex
@@ -26,7 +26,7 @@
 %----------------------------------------------------------------------------------------
 
 % article class because we want to fully customize the page and not use a cv template
-\documentclass[a4paper,12pt]{article}
+\documentclass[letterpaper,12pt]{article}
 
 %----------------------------------------------------------------------------------------
 %	FONT
@@ -97,6 +97,52 @@
 %debug page outer frames
 %\usepackage{showframe}
 
+%-------------------------
+% Custom commands
+\newcommand{\resumeItem}[1]{
+  \item\small{
+    {#1 \vspace{-2pt}}
+  }
+}
+
+\newcommand{\classesList}[4]{
+    \item\small{
+        {#1 #2 #3 #4 \vspace{-2pt}}
+  }
+}
+
+\newcommand{\resumeSubheading}[4]{
+  \vspace{-2pt}\item
+    \begin{tabular*}{1.0\textwidth}[t]{l@{\extracolsep{\fill}}r}
+      \textbf{#1} & \textbf{\small #2} \\
+      \textit{\small#3} & \textit{\small #4}
+    \end{tabular*}\vspace{-7pt}
+}
+
+\newcommand{\resumeSubSubheading}[2]{
+    \item
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+      \textit{\small#1} & \textit{\small #2} \\
+    \end{tabular*}\vspace{-7pt}
+}
+
+\newcommand{\resumeProjectHeading}[2]{
+    \item
+    \begin{tabular*}{1.001\textwidth}{l@{\extracolsep{\fill}}r}
+      \small#1 & \textbf{\small #2}\\
+    \end{tabular*}\vspace{-7pt}
+}
+
+\newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-4pt}}
+
+\renewcommand\labelitemi{$\vcenter{\hbox{\tiny$\bullet$}}$}
+\renewcommand\labelitemii{$\vcenter{\hbox{\tiny$\bullet$}}$}
+
+\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.0in, label={}]}
+\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
+\newcommand{\resumeItemListStart}{\begin{itemize}}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
+
 
 % job listing environments
 \newenvironment{jobshort}[2]
@@ -140,9 +186,10 @@
 % \raisebox{-0.05\height}\faGithub\ username \ | \
 % \raisebox{-0.00\height}\faLinkedin\ username \ | \ \raisebox{-0.05\height}\faGlobe \ mysite.com  & \hfill \emoji{calling} number
 % \end{tabularx}
-
 \begin{tabularx}{\linewidth}{@{} C @{}}
+\vspace{-25pt}
 \Huge{Ritvik Sharma} \\[7pt]
+\vspace{-20pt}
 \href{https://github.com/ritviksharma4}{\raisebox{-0.03\height}\faGithub\ github.com} \ $|$ \ 
 \href{https://linkedin.com/in/ritviksharma4}{\raisebox{-0.03\height}\faLinkedin\ linkedin.com} \ $|$ \ 
 \href{https://ritvik-sharma.com}{\raisebox{-0.03\height}\faGlobe \ www.ritvik-sharma.com} \ $|$ \ 
@@ -151,27 +198,44 @@
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
+%	EDUCATION
+%----------------------------------------------------------------------------------------
+\vspace{-16pt}
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {SRM Institute of Science \& Technology (Rank 2 Amongst 2000+ Students)}{2019 - 2023}
+      {Bachelor's of Technology, Computer Science with Spec. in AI-ML}{GPA: 9.86/10}
+    \vspace{-5pt}
+  \resumeSubHeadingListEnd
+
+%----------------------------------------------------------------------------------------
+%	SKILLS
+%----------------------------------------------------------------------------------------
+\section{Skills \& Certifications}
+\begin{tabularx}{\linewidth}{@{}l X@{}}
+Programming \& Development &  \normalsize{AWS -- Route53 + CloudFront + ECS + EC2, Python, Django, NodeJS, MySQL, MongoDB, gRPC, Git, Linux, Jenkins, Docker, Kubernetes}\\
+Machine Learnnig &  \normalsize{NLP, BERT, ALBERT, CRF, Slot-Filling + Intent Classification}\\  
+Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce93111ee34656b2351006a9a4ebad}{Harvard Entrepreneurship} , \href{https://learn.nvidia.com/certificates?id=0dfcf9b3a87143c59605f8179bd6ebb8}{NVIDIA Deep Learning}}
+\end{tabularx}
+
+%----------------------------------------------------------------------------------------
 % EXPERIENCE SECTIONS
 %----------------------------------------------------------------------------------------
 
-%Interests/ Keywords/ Summary
-% \section{Summary}
-% This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
-
 %Experience
+\vspace{-5pt}
 \section{Work Experience}
-
-\begin{joblong}{Barclays India -- Software Developer}{June 2023 - Present}
+\vspace{-5pt}
+\begin{joblong}{Barclays Global Service Centre -- Software Developer \& DevOps}{\textbf{June 2023 - Present}}
+\item Contributed to the \textbf{Successful launch of Barclays Cloud Platform} (NGCB), and contributed to \textbf{ArrowCard, the first credit card} on NGCB.
 \item \textbf{Saved \$15,000+ per month} by developing utilities ensuring optimal AWS Lambda usage
 \item \textbf{Reduced Error Resolution time by around 75\%} by developing an error routing utility across domains using Python, IBM Netcool, SNS Topic and Subscription Filters
 \item \textbf{Optimized and Developed} automated CICD pipelines for smooth deployments with \textbf{63\% higher success rates.}
-\item Participated in the \textbf{Successful launch of Barclays Cloud Platform} (NGCB), and contributed to \textbf{ArrowCard, the first credit card} on NGCB.}
 \end{joblong}
 
-% Saved \ \$15,000+ per month by developing utilities ensuring optimal AWS Lambda usage    
-
-\begin{joblong}{Barclays India -- Summer Internship}{June 2022 - August 2022}
-\item Used Python and MongoDB to scan logs in Kibana and find the \textbf{most frequently visited journeys} to migrate from \textbf{on-prem to AWS.}
+\begin{joblong}{Barclays Global Service Centre -- Summer Internship}{\textbf{June 2022 - August 2022}}
+\item Used Python and MongoDB to scan logs in Kibana and find the \textbf{most frequently visited journeys} to migrate from \textbf{on-premise to AWS.}
 \subitem -- Journey: Login, Transaction and View Statement are some journeys
 \subitem -- \textbf{Save cost} by finding out which services are rarely used to avoid deploying on AWS
 \subitem -- Finding out which services are causing the most errors
@@ -179,6 +243,7 @@
 \end{joblong}
   
 %Projects
+\vspace{-13pt}
 \section{Achievements \& Projects}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
@@ -188,37 +253,19 @@
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace Safety App} & \hfill \href{https://www.youtube.com/watch\?v\=LwRyr8F4fns}{Link to Demo} \\[3.75pt]
+\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace Safety App} & \hfill \href{https://youtu.be/LwRyr8F4fns\?si=gFr89H2WilEF3x55}{Link to Demo} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{-- An app for monitoring People and flagging those without Masks to keep the Workplace Safe.}  \\
 \multicolumn{2}{@{}X@{}}{-- \textbf{Designed and Implemented} the backend of the Mobile app where I worked on Face Detection and Recognition along with MySQL DB and NodeJS Backend.}  \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
-%	EDUCATION
-%----------------------------------------------------------------------------------------
-\section{Education}
-\begin{tabularx}{\linewidth}{@{}l X@{}}	
-2019 - 2023 & Bachelor's in (C.Sc with Spec. in AIML) at \textbf{SRM University} \hfll \normalsize (GPA: 9.86 \| Silver Medalist) \\
-
-\end{tabularx}
-
-%----------------------------------------------------------------------------------------
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
+\vspace{-5pt}
 \section{Publications}
 \begin{refsection}[citations.bib]
 \nocite{*}
 \printbibliography[heading=none]
 \end{refsection}
-
-%----------------------------------------------------------------------------------------
-%	SKILLS
-%----------------------------------------------------------------------------------------
-\section{Skills \& Certifications}
-\begin{tabularx}{\linewidth}{@{}l X@{}}
-Programming \& Development &  \normalsize{AWS -- Route53 + CloudFront + ECS + EC2, Python, Django, NodeJS, MySQL, MongoDB, gRPC--bi-directional data streaming}\\
-Machine Learnnig &  \normalsize{NLP, BERT, ALBERT, CRF, Slot-Filling + Intent Classification}\\  
-Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce93111ee34656b2351006a9a4ebad}{Harvard Entrepreneurship} , \href{https://learn.nvidia.com/certificates?id=0dfcf9b3a87143c59605f8179bd6ebb8}{NVIDIA Deep Learning}}
-\end{tabularx}
 
 \end{document}
