Added Kafka and JWT

--- a/RitvikSharma_Resume.tex
+++ b/RitvikSharma_Resume.tex
@@ -214,7 +214,7 @@
 %----------------------------------------------------------------------------------------
 \section{Skills \& Certifications}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Programming \& Development &  \normalsize{AWS -- Route53 + CloudFront + ECS + EC2, Python, Django, NodeJS, MySQL, MongoDB, gRPC, Git, Linux, Jenkins, Docker, Kubernetes}\\
+Programming \& Development &  \normalsize{AWS \{Route53, CloudFront, ECS, EC2\}, Python, Django, NodeJS, MySQL, MongoDB, gRPC, Git, Linux, Jenkins, Docker, Kubernetes, Kafka, JWT}\\
 Machine Learnnig &  \normalsize{NLP, BERT, ALBERT, CRF, Slot-Filling + Intent Classification}\\  
 Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce93111ee34656b2351006a9a4ebad}{Harvard Entrepreneurship} , \href{https://learn.nvidia.com/certificates?id=0dfcf9b3a87143c59605f8179bd6ebb8}{NVIDIA Deep Learning}}
 \end{tabularx}
@@ -253,7 +253,7 @@ Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce9311
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace Safety App} & \hfill \href{https://youtu.be/LwRyr8F4fns\?si=gFr89H2WilEF3x55}{Link to Demo} \\[3.75pt]
+\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace Safety App} & \hfill \href{https://www.youtube.com/watch\?v\=LwRyr8F4fns}{Link to Demo} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{-- An app for monitoring People and flagging those without Masks to keep the Workplace Safe.}  \\
 \multicolumn{2}{@{}X@{}}{-- \textbf{Designed and Implemented} the backend of the Mobile app where I worked on Face Detection and Recognition along with MySQL DB and NodeJS Backend.}  \\
 \end{tabularx}
