Added SRM Rank 2 Certificate to Education

--- a/RitvikSharma_Resume.tex
+++ b/RitvikSharma_Resume.tex
@@ -204,7 +204,7 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {SRM Institute of Science \& Technology (Rank 2 Amongst 2000+ Students)}{2019 - 2023}
+      {SRM Institute of Science \& Technology \href{https://github.com/ritviksharma4/My-Certificates/blob/main/My\%20Certificates/Ritvik_SRM_Rank_2_Certificate.pdf}{(Rank 2 Amongst 2000+ Students)}}{2019 - 2023}
       {Bachelor's of Technology, Computer Science with Spec. in AI-ML}{GPA: 9.86/10}
     \vspace{-5pt}
   \resumeSubHeadingListEnd
@@ -253,7 +253,7 @@ Certifications & \normalsize{\href{https://courses.edx.org/certificates/09ce9311
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace Safety App} & \hfill \href{https://www.youtube.com/watch\?v\=LwRyr8F4fns}{Link to Demo} \\[3.75pt]
+\href{https://hypersafety.ritvik-sharma.com/}{HyperSafety: Workplace Safety App} & \hfill \href{https://www.youtube.com/watch?v=LwRyr8F4fns}{Link to Demo} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{-- An app for monitoring People and flagging those without Masks to keep the Workplace Safe.}  \\
 \multicolumn{2}{@{}X@{}}{-- \textbf{Designed and Implemented} the backend of the Mobile app where I worked on Face Detection and Recognition along with MySQL DB and NodeJS Backend.}  \\
 \end{tabularx}
